--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vite": "^7.0.4",
+    "@vitejs/plugin-react": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.50",
     "eslint": "^9.30.1",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "vite": "^7.0.4"
+    "tailwindcss": "^4.1.11"
   }
 }
