--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "cd client && npm install && npm run build",
-    "serve": "node index.js"
+    "build": "cd client && npm run build",
+    "postinstall": "cd client && npm install"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mongoose": "^8.17.1",
+    "mongoose": "^8.17.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
