--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
     "dev": "nodemon index.js",
     "build": "cd ../client && npm install && npm run build",
     "postinstall": "cd ../client && npm install && npm run build"
@@ -12,9 +12,10 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.5.1",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
